fix: social icons alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,36 +75,39 @@
  }
  /* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
  .icon-bar {
- 	position: fixed !important; ;
+     position: fixed !important;
+     z-index: 10000;
  	top: 45%;
  	-webkit-transform: translateY(-50%);
  	-ms-transform: translateY(-50%);
- 	transform: translateY(-50%);
+     transform: translateY(-50%);
  }
  /* Style the icon bar links */
  .icon-bar a {
- 	display: block;
+ 	display: block !important;
  	text-align: center;
  	padding: 16px;
  	transition: all 0.3s ease;
  	color: white;
- 	font-size: 20px;
+    font-size: 20px;
+
  }
+
  /* Style the social media icons with color - from w3schools */
  .icon-bar a:hover {
  	background-color: #000;
  }
  .github {
  	background: #012D32;
- 	color: white;
+     color: white;
  }
  .twitter {
  	background: #012D32;
- 	color: white;
+     color: white;
  }
  .linkedin {
  	background: #012D32;
- 	color: white;
+     color: white;
  }
  .section-title {
  	font-family: "AzonixRegular";
@@ -118,7 +121,8 @@
  	color: #ffffff;
  	text-align: center;
  	font-size: 1.1rem;
- 	margin-top: -25px;
+     margin-top: -25px;
+
  }
  .landing-image {
  	display: flex;
@@ -138,7 +142,8 @@
  	color: #ffffff;
  	text-align: center;
  	margin: 5%;
- 	transform: translateY(-10px);
+     transform: translateY(-10px);
+   
  }
  #aboutme-section {
  	height: 110vh;
@@ -175,7 +180,8 @@
  }
  .card-deck {
  	margin-top: -350px;
- 	padding: 4%;
+     padding: 4%;
+ 
  }
  #testimonial-section {
  	height: 100vh;
@@ -185,7 +191,7 @@
  .testimonial-info {
  	font-family: 'Andika New Basic', sans-serif;
  	margin-bottom: 5%;
- 	margin-top: -220px;
+     margin-top: -220px;
  }
  .carousel {
  	margin-top: 50px;
@@ -378,7 +384,8 @@
  	margin: 0 0 15px 0
  }
  .main-timeline .description {
- 	margin-bottom: 0
+     margin-bottom: 0;
+      margin-right: 40%;
  }
  .main-timeline .timeline:nth-child(2n) .date-content {
  	float: right
